deploy/wordpress.yaml
# Wordpress deployment
#
# install dependencies first
# 1. namespace.yaml
# 2. pvc.yaml
# 3. service.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: wordpress
  name: wordpress
  labels:
    app: wordpress
spec:
  containers:
    - image: launcher.gcr.io/google/wordpress4-php5-apache
      name: wordpress
      volumeMounts:
        - name: wordpress-data
          mountPath: /var/www/html
          subPath: wp
      ports:
        - containerPort: 80
          name: http
      readinessProbe:
        initialDelaySeconds: 10
        successThreshold: 1
        httpGet:
          path: /licence.txt
          port: 80
    - image: launcher.gcr.io/google/mysql5
      name: mysql
      volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
          subPath: db
  volumes:
    - name: wordpress-data
      persistentVolumeClaim:
        claimName: wordpress-data
    - name: mysql-data
      persistentVolumeClaim:
        claimName: mysql-data
